auth/templates/reloader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reloader-reloader
    app.kubernetes.io/name: reloader
    app.kubernetes.io/instance: reloader
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v1.4.22
  name: reloader-reloader
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: reloader-reloader
  template:
    metadata:
      labels:
        app: reloader-reloader
        app.kubernetes.io/name: reloader
        app.kubernetes.io/instance: reloader
    spec:
      serviceAccountName: reloader-reloader
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: reloader-reloader
          image: "ghcr.io/stakater/reloader:v1.4.22"
          imagePullPolicy: IfNotPresent
          args:
            - "--log-level=info"
          ports:
            - name: http
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /live
              port: http
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext: {}
